Closed Bug 1753019 Opened 4 years ago Closed 4 years ago

Mozilla Android AddressBar Conflict with Sticky Button on Bottom

Categories

(Core :: Panning and Zooming, defect, P2)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox104 --- fixed

People

(Reporter: johnaps94, Assigned: dlrobertson)

References

(Blocks 2 open bugs, Regressed 1 open bug)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/97.0.4692.99 Safari/537.36

Steps to reproduce:

I have created a button that is after the content and have applied css for it to become sticky at the bottom of the page...

<button class="ocs-trigger ocs-toggle ocs-toggle-posts-toc-mobile">Περιεχόμενα</button>
button.ocs-toggle-posts-toc-mobile {
display: block;
bottom: 10px;
position: sticky;
position: -webkit-sticky;
margin: auto;
border-radius: 4px;
box-shadow: 0 0 3px 0 #d5d5d5;
background: #232f3e;
font-weight: 500;
font-size: 18px;
padding: 7px 12px;
}
It works everywhere in any browser i tested except mozilla android. If mozilla bottom adressbar is visible the button works okay. https://imgur.com/a/EJosALR

BUT if mozilla’s bottom address bar is hidden, the button isnt clickable. https://imgur.com/a/A2jwzIl

See the faulty behavior on action: https://i.stack.imgur.com/LAHor.gif

test url: https://thefinterest.kinsta.cloud/p/asjalska/

Also there is an active thread in Stackoverflow about this:
https://stackoverflow.com/questions/70893056/mozilla-android-addressbar-conflict-with-sticky-button-on-bottom

Actual results:

The button isnt clickable because it actual position get wrongly calculated...

Expected results:

The sticky element should be clickable despite if the mozilla adressbar is visible or hidden!

We actually fixed position:sticky case in bug 1594451, but probably I've missed some cases.

Component: Layout → Panning and Zooming
Whiteboard: [apz-android-needstriage]

It would be perfect if this case could also be fixed, or if you have some suggestion to "bypass" this problem on firefox!

I expect this code needs to be adjusted to handle position:sticky.

Bug 1594451 fixed the rendering codepath for position:sticky elements (to have their position follow the dynamic toolbar), as well as another codepath (which, now that we use WebRender, is only used for scenarios related to scrollbar dragging), but it's still necessary to adjust the above codepath for correct targeting of touch input events. (Sorry for overlooking this during the review of bug 1594451.)

I'm going to tentatively mark this as S2 as this bug can manifest in the user not being able to click a button important for a site's operation, and the workaround (of scrolling up to show the toolbar and then clicking again) may not be obvious.

Severity: -- → S2
Priority: -- → P2
Whiteboard: [apz-android-needstriage]
Assignee: nobody → drobertson
Attachment #9280251 - Attachment description: Bug 1753019 - sticky content stuck to bottom. r=tnikkel → Bug 1753019 - sticky content stuck to bottom. r=tnikkel,botond
Attachment #9280251 - Attachment description: Bug 1753019 - sticky content stuck to bottom. r=tnikkel,botond → Bug 1753019 - Use the animation id to identify hit testing metadata. r=botond,tnikkel
Blocks: 1778007
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
Blocks: 1778120
Regressions: 1854010
Regressions: 1793906
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: